opam-version: "2.0"
name:         "torch"
bug-reports:  "https://github.com/LaurentMazare/ocaml-torch/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-torch"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-torch.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]
version:      "dev"

run-test: [["dune" "runtest" "-p" name "-j" jobs]]
build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "base" {>= "v0.11.0" & < "v0.14"}
  "cmdliner"
  "ctypes" {>= "0.5"}
  "ctypes-foreign"
  "dune" {>= "1.3.0" build}
  "dune-configurator"
  "libtorch" {>= "1.7.0" & < "1.8.0"}
  "npy"
  "ocaml" {>= "4.07"}
  "ocaml-compiler-libs"
  "ppx_custom_printf" {< "v0.14"}
  "ppx_expect" {< "v0.14"}
  "ppx_sexp_conv" {< "v0.14"}
  "sexplib" {< "v0.14"}
  "stdio" {< "v0.14"}
]

available: os = "linux" | os = "macos"

synopsis: "PyTorch bindings for OCaml"
description: """
The ocaml-torch project provides some OCaml bindings for the PyTorch library.
This brings to OCaml NumPy-like tensor computations with GPU acceleration and
tape-based automatic differentiation.
"""
