opam-version: "2.0"
name:         "torch"
bug-reports:  "https://github.com/LaurentMazare/ocaml-torch/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-torch"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-torch.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]
version:      "dev"

run-test: [["dune" "runtest" "-p" name "-j" jobs]]
build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "base" {>= "v0.14.0" & < "v0.15"}
  "cmdliner" {>= "1.1.1"}
  "ctypes" {>= "0.11"}
  "ctypes-foreign"
  "dune" {>= "1.3.0" build}
  "dune-configurator"
  "libtorch" {>= "2.0.0" & < "2.1.0"}
  "npy"
  "ocaml" {>= "4.07"}
  "ocaml-compiler-libs"
  "ppx_custom_printf" {>= "v0.14" & < "v0.15"}
  "ppx_expect" {>= "v0.14" & < "v0.15"}
  "ppx_sexp_conv" {>= "v0.14" & < "v0.15"}
  "ppx_string" {>= "v0.14" & < "v0.15"}
  "sexplib" {>= "v0.14" & < "v0.15"}
  "stdio" {>= "v0.14" & < "v0.15"}
]

available: os = "linux" | os = "macos"

synopsis: "PyTorch bindings for OCaml"
description: """
The ocaml-torch project provides some OCaml bindings for the PyTorch library.
This brings to OCaml NumPy-like tensor computations with GPU acceleration and
tape-based automatic differentiation.
"""
