opam-version: "2.0"
name:         "torch"
bug-reports:  "https://github.com/LaurentMazare/ocaml-torch/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-torch"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-torch.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]
version:      "dev"

run-test: [["dune" "runtest" "-p" name "-j" jobs]]
build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "base" {>= "v0.15.0" & < "v0.16"}
  "cmdliner" {>= "1.1.1"}
  "ctypes" {>= "0.11"}
  "ctypes-foreign"
  "dune" {>= "1.3.0" build}
  "dune-configurator"
  "libtorch" {>= "2.0.0" & < "2.1.0"}
  "npy"
  "ocaml" {>= "4.07"}
  "ocaml-compiler-libs"
  "ppx_custom_printf" {>= "v0.15" & < "v0.16"}
  "ppx_expect" {>= "v0.15" & < "v0.16"}
  "ppx_sexp_conv" {>= "v0.15" & < "v0.16"}
  "ppx_string" {>= "v0.15" & < "v0.16"}
  "sexplib" {>= "v0.15" & < "v0.16"}
  "stdio" {>= "v0.15" & < "v0.16"}
  "int_repr" {>= "v0.15.0" & < "v0.16"}
  "yojson" {>= "2.0.0"}
]

available: os = "linux" | os = "macos"

synopsis: "PyTorch bindings for OCaml"
description: """
The ocaml-torch project provides some OCaml bindings for the PyTorch library.
This brings to OCaml NumPy-like tensor computations with GPU acceleration and
tape-based automatic differentiation.
"""
