(executables
  (names relativistic_dcgan gan_stability)
  (modules relativistic_dcgan gan_stability)
  (libraries base torch_core torch stdio torch_vision))

(executables
  (names mnist_gan mnist_cgan mnist_dcgan)
  (modules mnist_gan mnist_cgan mnist_dcgan)
  (libraries base torch_core torch stdio))
