(library
  (name torch_core)
  (c_names torch_stubs)
  (cxx_names torch_api)
  (cxx_flags -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0)
  (c_library_flags :standard -lstdc++ -lc10 -lcaffe2 -ltorch)
  (no_dynlink)
  (modes native)
  (libraries bigarray ctypes.foreign ctypes.stubs ctypes))

(rule
  (targets torch_bindings.ml)
  (deps    ../stubs/torch_bindings.ml)
  (action  (copy ../stubs/torch_bindings.ml torch_bindings.ml)))

(rule
  (targets torch_stubs.c torch_generated.ml)
  (deps    (:torch_gen ../stubs/torch_gen.exe))
  (action  (run %{torch_gen})))
