(library
  (name torch_core)
  (public_name torch.core)
  (c_names torch_stubs)
  (cxx_names torch_api)
  (cxx_flags -std=c++11 -fPIC (:include cxx_flags.sexp))
  (c_library_flags :standard -lstdc++ (:include c_library_flags.sexp))
  (libraries bigarray ctypes.foreign ctypes.stubs ctypes))

(rule
  (targets cxx_flags.sexp c_library_flags.sexp)
  (deps    (:discover ../config/discover.exe))
  (action  (run %{discover})))

(rule
  (targets torch_bindings.ml)
  (deps    ../stubs/torch_bindings.ml)
  (action  (copy ../stubs/torch_bindings.ml torch_bindings.ml)))

(rule
  (targets torch_bindings_generated.ml)
  (deps    ../stubs/torch_bindings_generated.ml)
  (action  (copy ../stubs/torch_bindings_generated.ml torch_bindings_generated.ml)))

(rule
  (targets torch_stubs.c torch_generated.ml)
  (deps    (:torch_gen ../stubs/torch_gen.exe))
  (action  (run %{torch_gen})))
